--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"> -->
+  <script src="https://kit.fontawesome.com/9385c13ce5.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
-  <app-header></app-header>
-  <app-acerca-de></app-acerca-de>
-  
 </body>
 </html>
