--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Lora:ital@0;1&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9385c13ce5.js" crossorigin="anonymous"></script>
 </head>
 <body>
